--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
     <title>Js Splash Home - Documentation</title>
-    <link rel="icon" href="out/ico.png">
+    <link rel="icon" href="out/logo.png">
 
     <script src="out/scripts/prettify/prettify.js"></script>
     <script src="out/scripts/prettify/lang-css.js"></script>
@@ -53,7 +53,7 @@
     <section>
         <div class="jumbotron" style="padding-top: 20px; padding-bottom: 10px;">
             <div class="container text-center">
-                <img src="out/ico.png" style="width: 120px; height: 120px">
+                <img src="out/logo.png" style="width: 120px; height: 120px">
                 <h1>JS <a href="https://github.com/koffiisen/js-splash" target="_blank">SPLASH</a></h1>
                 <p>
                     <strong>Very easy to use js splash screen. </strong>You don't need jQuery, Angular, React,
