--- a/index.html
+++ b/index.html
@@ -116,11 +116,19 @@
         return Math.floor(Math.random() * (max - min + 1)) + min;
     }
 
+    function randomColor() {
+        return "#000000".replace(/0/g, function () {
+            return (~~(Math.random() * 16)).toString(16);
+        });
+    }
+
     var splash = new Splash({background: 'rgba(0,0,0,.6)'});
 
     var RANDOM_SPLASH = [
         function () {
-            splash.fromAnimation(SVGAnimation.Bolt)
+            splash.fromAnimation(SVGAnimation.Bolt, 3000, {
+                color: randomColor()
+            })
         },
         function () {
             splash.fromHtml('<h1 style="color: #e0a800">JS SPLASH</h1>');
@@ -132,7 +140,9 @@
             });
         },
         function () {
-            splash.fromAnimation(SVGAnimation.FillRotate)
+            splash.fromAnimation(SVGAnimation.FillRotate, 3000, {
+                color: "#e0a800"
+            })
         },
         function () {
             var custom_node = document.createElement("div");
@@ -154,21 +164,29 @@
             custom_node.appendChild(text);
 
             splash.fromCustomNode(custom_node, 5000, {
-                color: '#ccaaff',
+                color: randomColor(),
                 'font-family': 'fantasy'
             });
         },
         function () {
-            splash.fromAnimation(SVGAnimation.CenterBar)
+            splash.fromAnimation(SVGAnimation.CenterBar, 3000, {
+                color: randomColor()
+            })
         },
         function () {
-            splash.fromAnimation(SVGAnimation.Dalton)
+            splash.fromAnimation(SVGAnimation.Dalton, 3000, {
+                color: randomColor()
+            })
         },
         function () {
-            splash.fromAnimation(SVGAnimation.Flag)
+            splash.fromAnimation(SVGAnimation.Flag, 3000, {
+                color: randomColor()
+            })
         },
         function () {
-            splash.fromAnimation(SVGAnimation.Orbit)
+            splash.fromAnimation(SVGAnimation.Orbit, 3000, {
+                color: randomColor()
+            })
         }
     ];
 
